# selene

./: .gitattributes  .gitignore  .release-please-manifest.json  CHANGELOG.md  CITATION.cff  Cargo.toml  DEVELOPMENT.md  README.md  conftest.py  devenv.nix  devenv.yaml  hatch_build.py  justfile  pyproject.toml  release-please-config.json
selene-core/: CHANGELOG.md  Cargo.toml  cbindgen.toml  hatch_build.py  pyproject.toml
selene-core/c/include/selene/: core_types.h  error_model.h  runtime.h  simulator.h
selene-core/cbindgen/: core_types.toml  error_model.toml  runtime.toml  simulator.toml
selene-core/examples/: cbindgen.toml
selene-core/examples/error_model/rust/: lib.rs
selene-core/examples/runtime/rust/: lib.rs
selene-core/examples/simulator/rust/: lib.rs
selene-core/python/selene_core/: __init__.py  gate_metadata.py  quantum_interface.py  trace.py  tracing.py
selene-core/python/selene_core/build_utils/: __init__.py  symbols.py  types.py  utils.py
selene-core/python/selene_core/build_utils/builtins/: __init__.py  helios.py  qir.py  selene.py  sol.py
selene-core/rust/: encoder.rs  error_model.rs  lib.rs  metadata.rs  operation.rs  runtime.rs  simulator.rs
selene-core/rust/error_model/: helper.rs  inline.rs  interface.rs  plugin.rs  version.rs
selene-core/rust/operation/: plugin.rs
selene-core/rust/runtime/: helper.rs  inline.rs  interface.rs  plugin.rs  version.rs
selene-core/rust/simulator/: helper.rs  inline.rs  interface.rs  plugin.rs  version.rs
selene-core/rust/simulator/conformance_testing/: framework.rs  two_qubit.rs
selene-ext/interfaces/base_qis/c/: CMakeLists.txt
selene-ext/interfaces/base_qis/c/cmake/: BaseQISSeleneInterfaceConfig.cmake.in
selene-ext/interfaces/base_qis/c/include/base_qis/: debug.h  heap.h  hooks.h  macros.h  panic.h  print.h  program_lifetime.h  random.h  selene_lifetime.h  shot.h  string_utils.h  unwrap.h
selene-ext/interfaces/base_qis/c/src/: debug.c  heap.c  hooks.c  logging.h  panic.c  print.c  program_lifetime.c  random.c  selene_lifetime.c  shot.c  string_utils.c  unwrap.c
selene-ext/interfaces/helios_qis/c/: CMakeLists.txt
selene-ext/interfaces/helios_qis/c/cmake/: HeliosSeleneInterfaceConfig.cmake.in
selene-ext/interfaces/helios_qis/c/include/helios_qis/: helios_ops.h  interface.h
selene-ext/interfaces/helios_qis/c/src/: helios_ops.c  interface.c  logging.h  main.c
selene-ext/interfaces/sol_qis/c/: CMakeLists.txt
selene-ext/interfaces/sol_qis/c/cmake/: SolSeleneInterfaceConfig.cmake.in
selene-ext/interfaces/sol_qis/c/include/sol_qis/: interface.h  sol_ops.h
selene-ext/interfaces/sol_qis/c/src/: interface.c  logging.h  main.c  sol_ops.c
selene-ext/runtimes/simple/: Cargo.toml
selene-ext/runtimes/simple/python/selene_simple_runtime_plugin/: __init__.py  plugin.py
selene-ext/runtimes/simple/python/tests/: test_metadata.py  test_tracking.py
selene-ext/runtimes/simple/python/tests/resources/from_guppy/test_metadata/test_metadata_simple/: debug_info_simple-debug-helios-aarch64-apple-darwin.ll  debug_info_simple-debug-helios-aarch64-unknown-linux-gnu.ll  debug_info_simple-debug-helios-x86_64-apple-darwin.ll  debug_info_simple-debug-helios-x86_64-unknown-linux-gnu.ll  debug_info_simple-debug-helios-x86_64-windows-gnu.ll  debug_info_simple-debug-sol-aarch64-apple-darwin.ll  debug_info_simple-debug-sol-aarch64-unknown-linux-gnu.ll  debug_info_simple-debug-sol-x86_64-apple-darwin.ll  debug_info_simple-debug-sol-x86_64-unknown-linux-gnu.ll  debug_info_simple-debug-sol-x86_64-windows-gnu.ll
selene-ext/runtimes/simple/python/tests/resources/from_guppy/test_tracking/test_debug_info_emitted/: debug_info_simple-debug-helios-aarch64-apple-darwin.ll  debug_info_simple-debug-helios-aarch64-unknown-linux-gnu.ll  debug_info_simple-debug-helios-x86_64-apple-darwin.ll  debug_info_simple-debug-helios-x86_64-unknown-linux-gnu.ll  debug_info_simple-debug-helios-x86_64-windows-gnu.ll  debug_info_simple-debug-sol-aarch64-apple-darwin.ll  debug_info_simple-debug-sol-aarch64-unknown-linux-gnu.ll  debug_info_simple-debug.sha256  (+3 more)
selene-ext/runtimes/simple/rust/: lib.rs
selene-ext/runtimes/soft_rz/: Cargo.toml
selene-ext/runtimes/soft_rz/python/selene_soft_rz_runtime_plugin/: plugin.py
selene-ext/runtimes/soft_rz/python/tests/: test_batching.py
selene-ext/runtimes/soft_rz/python/tests/snapshots/test_batching/test_batching_behaviour/: instructions_batching_1.json  instructions_batching_2.json  instructions_batching_8.json  trace_batching_1.json  trace_batching_2.json  trace_batching_8.json
selene-ext/runtimes/soft_rz/rust/: lib.rs
selene-ext/simulators/quest/: Cargo.toml
selene-ext/simulators/quest/python/: gate_definitions.py
selene-ext/simulators/quest/rust/: lib.rs
selene-ext/simulators/stim/: Cargo.toml  build.rs
selene-ext/simulators/stim/c_interface/: CMakeLists.txt  wrapper.cpp  wrapper.h
selene-ext/simulators/stim/c_interface/cmake/: SeleneStimCInterfaceConfig.cmake.in
selene-ext/simulators/stim/c_interface/include/selene_stim_c_interface/: interface.h
selene-ext/simulators/stim/c_interface/src/: c_interface.cpp  tableau_simulator_min.h
selene-ext/simulators/stim/python/: gate_definitions.py
selene-ext/simulators/stim/python/selene_stim_plugin/: __init__.py  plugin.py  state.py
selene-ext/simulators/stim/python/tests/: test_reduction.py
selene-ext/simulators/stim/rust/: bindings.rs  lib.rs  wrapper.rs
selene-ext/utilities/argreader/: Cargo.toml  build.rs
selene-ext/utilities/argreader/python/selene_argreader_plugin/: __init__.py  plugin.py  provider.py
selene-ext/utilities/argreader/python/tests/: test_arg_provider_context.py  test_argreader.py
selene-ext/utilities/argreader/python/tests/resources/: argreader_example.ll
selene-ext/utilities/argreader/python/tests/snapshots/test_argreader/test_arg_reader/: constant_args.yaml  variable_args.yaml
selene-ext/utilities/argreader/python/tests/snapshots/test_argreader/test_arg_reader_trace/: trace.json
selene-ext/utilities/argreader/rust/: lib.rs
selene-sim/c/: CMakeLists.txt
selene-sim/c/include/selene/: selene.h
(+877 files in other folders)
