[package]
name = "selene-core"
version = "0.3.0-alpha.0"
edition = "2024"

[lib]
name = "selene_core"
path = "rust/lib.rs"
crate-type = ["lib"]

[dependencies]
anyhow = "1.0"
thiserror = "2.0"
libloading = "0.8"
delegate = "0.13"
derive_more = { version = "2.1", features = ["from", "into", "add", "add_assign"] }

[lints.clippy]
undocumented_unsafe_blocks = "allow" # TODO: add safety docs
missing_safety_doc = "allow"         # TODO: add safety docs
