[project]
name = "selene-core"
version = "0.2.2"
requires-python = ">=3.10"
description = "The core interop library for Selene python interfaces"
readme = "python/selene_core/README.md"
dependencies = [
  "networkx>=2.6,<4",
  "pyyaml~=6.0",
  "pydot>=4.0.0",
  "typing_extensions>=4",
]

[project.urls]
homepage = "https://github.com/quantinuum/selene/selene-core"
repository = "https://github.com/quantinuum/selene/selene-core"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ['python/selene_core']
exclude = ['python/selene_core/README.md']

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.uv]
cache-keys = [
  { file = "examples/**/*.rs" },
  { file = "examples/**/Cargo.lock" },
  { file = "examples/**/Cargo.toml" },
  { file = "c/include/selene/*.h" },
  { file = "Cargo.toml" },
]
