[project]
name = "selene-core"
version = "0.3.0a0"
requires-python = ">=3.10"
description = "The core interop library for Selene python interfaces"
readme = "python/selene_core/README.md"
dependencies = [
  "hugr>=0.13.0",
  # required for inspecting object files to find defined and declared symbols
  "lief>=0.16.5",
  # required for inspecting LLVM files to find defined and declared symbols
  # note: llvmlite 0.45.1 is the last version to support x86_64 macOS.
  "llvmlite==0.45.1; sys_platform == 'darwin' and platform_machine == 'x86_64'",
  "llvmlite~=0.47; sys_platform != 'darwin' or platform_machine != 'x86_64'",
  "networkx>=2.6,<4",
  "pydantic>=2.12.5",
  "pydot>=4.0.0",
  "pyyaml~=6.0",
  "typing_extensions>=4",
  "ziglang~=0.13",
]

[project.urls]
homepage = "https://github.com/quantinuum/selene/selene-core"
repository = "https://github.com/quantinuum/selene/selene-core"

[build-system]
requires = ["hatchling", "pydantic>=2.12.5"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "qir-qis~=0.1.6",
]

[tool.hatch.build.targets.wheel]
packages = ['python/selene_core']
exclude = ['python/selene_core/README.md']

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.uv]
cache-keys = [
  { file = "examples/**/*.rs" },
  { file = "examples/**/Cargo.lock" },
  { file = "examples/**/Cargo.toml" },
  { file = "python/selene_core/trace.py" },
  { file = "c/include/selene/*.h" },
  { file = "Cargo.toml" },
]


[tool.deptry]
known_first_party = ["selene_core"]

[tool.deptry.package_module_name_map]
pyyaml = "yaml"

[tool.deptry.per_rule_ignores]
DEP001 = [
  "hatchling",  # used in build system
  "selene_sim", # dynamic import
]
DEP002 = [
  "pydot",   # needed by networkx
  "ziglang", # used in build system
]
